--- a/website/index.css
+++ b/website/index.css
@@ -4,13 +4,23 @@ body {
     height: 100%;
     font-family: Helvetica;
 }
+/* -------------------------------------------------------------*/
+
+.headline {
+    font-weight: bold;
+    color: white;
+}
+.headline-image {
+    width: 20%;
+    height: auto;
+}
+/* -------------------------------------------------------------*/
+
 .grid-container {
     position: fixed;
     display: grid;
-    grid-template-columns: 25% 50% 25%;
+    grid-template-columns: 65% 35%;
     grid-template-rows: 10% 30% 30% 30%;
-    grid-row-gap: 2px;
-    grid-column-gap: 2px;
     height: 100%;
     width: 100%;
 }
@@ -26,15 +36,11 @@ body {
     padding: 5px;
     width: 100%;
 }
+/* -------------------------------------------------------------*/
+
 .entities {
     padding: 0;
 }
-.slack {
-    grid-area: 1 / 1 / 5 / 2;
-}
 .twitter {
-    grid-area: 1 / 3 / 5 / 5;
-}
-.headline {
-    font-weight: bold;
+    grid-area: 1 / 2 / 5 / 5;
 }
