--- a/website/css/index.css
+++ b/website/css/index.css
@@ -25,7 +25,11 @@ body {
 .timeline-holder {
     width: 100%;
     height: auto;
-    
+
+}
+
+.masthead img {
+    width: 60%;
 }
 /* --------------------------------------------- */
 
